--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@tailwindcss/typography": "^0.5.0",
     "daisyui": "^1.24.3",
     "immer": "^9.0.12",
+    "mapbox-gl": "*",
     "next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-map-gl": "^7.0.15",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
